{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 23,
  "lineage": "5e52257c-9346-ffc9-2b3e-a9497be8b1a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:823697412215:instance/i-042a49c4dc6b8fcaf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-042a49c4dc6b8fcaf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-04e41ff9ee71c1e67",
            "private_dns": "ip-10-0-0-162.eu-west-2.compute.internal",
            "private_ip": "10.0.0.162",
            "public_ip": "3.8.23.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-008b4d2e46daea173",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba13ca99d919365d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c861aff4e35af65"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e33672521a6b78bd",
            "owner_id": "823697412215",
            "vpc_id": "vpc-029c11b6ef8c2ddf7"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ee4e597110452de",
            "original_route_table_id": "rtb-03340d96d9fb1a7de",
            "route_table_id": "rtb-0303d0ee02cb51500",
            "vpc_id": "vpc-029c11b6ef8c2ddf7"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0303d0ee02cb51500",
            "owner_id": "823697412215",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e33672521a6b78bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-029c11b6ef8c2ddf7"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:823697412215:security-group/sg-05c861aff4e35af65",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c861aff4e35af65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "823697412215",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-029c11b6ef8c2ddf7"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:823697412215:subnet/subnet-0ba13ca99d919365d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ba13ca99d919365d",
            "map_public_ip_on_launch": false,
            "owner_id": "823697412215",
            "vpc_id": "vpc-029c11b6ef8c2ddf7"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:823697412215:vpc/vpc-029c11b6ef8c2ddf7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0190d77dd9e83bce0",
            "default_route_table_id": "rtb-03340d96d9fb1a7de",
            "default_security_group_id": "sg-05ee49a754841ba82",
            "dhcp_options_id": "dopt-fe733496",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029c11b6ef8c2ddf7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03340d96d9fb1a7de",
            "owner_id": "823697412215"
          }
        }
      ]
    }
  ]
}